# tournament-project

./: CMakeLists.txt  README.md  fighter.c  multi_observer.c  single_observer.c  tournament.c  tournament_control.c
version_10/: CMakeLists.txt  fighter.c  multi_observer.c  single_observer.c  tournament.c
version_4_6/: CMakeLists.txt  tournament.c
version_7_8/: CMakeLists.txt  fighter.c  tournament.c
version_9/: CMakeLists.txt  fighter.c  observer.c  single_observer.c  tournament.c
